# Endstream

./: .gitignore  Cargo.toml  EndStream.code-workspace  README.md  convert.sh  index.html  linux-release.sh  macos-release.sh  main.scss  release.sh  web-release.sh  windows-release.sh
.cargo/: config.toml
EndStream-Assets/: Agenda Price Statistics.xlsx  EndStream Changelog.docx  Endstream Digital Rules.docx  Game Design Brief.docx  card-spreadsheet.xlsx  game-design-document.docx
EndStream-Assets/assets/: board.ai
EndStream-Assets/assets/various-assets-svg/: Hideouts Back _cmyk_WIP2.ai  Operator Back2_cmyk .ai  Operator Background_cmyk .ai
assets/: cards.json  cards_controller.rb  seeds.rb
assets/agenda-icons/raw-icons/: convert.sh
assets/card-csv-data/: CT-1.csv  GC-1.csv  OP-3.csv  TP-1.csv
assets/cards/: README.md
src/: agendas.rs  card.rs  ext.rs  lib.rs  main.rs  stackoverflow.rs  textmesh.rs  utils.rs  visual_card.rs
src/card/: agenda.rs  agenda_cost.rs  back.rs  background.rs  century.rs  flavour_text.rs  gear_slots.rs  general_info.rs  top_row.rs
src/visual_card/: abilities.rs  ability.rs  agenda_cost.rs  artwork.rs  back.rs  background.rs  century.rs  flavour_text.rs  gear_slots.rs  general_info.rs  top_row.rs
src/visual_card/abilities/: ability.rs
