[package]
name = "endstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]

# [lib]
# crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1

[dependencies]
anyhow = "1.0.71"
bevy_editor_pls = "0.4.0"
bevy_egui = "0.20.3"
bevy_embedded_assets = "0.7.0"
bevy_fly_camera = "0.10.0"
bevy_mod_picking = { version = "0.13.0", features = ["backend_rapier"] }
# bevy_rapier3d = { version = "0.21.0", features = ["debug-render-3d", "simd-nightly"] }
derive_more = "0.99.17"
meshtext = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
textwrap = "0.16.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["time"] }

[dependencies.bevy]
# path = "../bevy"
version = "0.10.1"
features = ["png", "bmp", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.9", features = ["js"] }
tracing-web = "0.1.2"
console_error_panic_hook = "0.1.7"
